Fix events banner display on mobile

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,8 @@ p {font-size:1.1em}
     .wrap{padding: 40px 20px}
     h2{font-size: 1.5em}
     .leftfloat{float: none;width: 100px;}
+    .double-grid .column{width:100%}
     .column{display:block;width:100%;margin:0 auto;padding:0}
     blockquote{font-size:1.0em}
+    ul{margin-left:15px}
 }
